# grss

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  api.html  api_cpp.html  api_py.html  build.sh  build_cpp.sh  build_python.sh  contributing.md  environment.yml  examples.html  fit.html  genindex.html  index.html  initialize.sh  make_docs.sh  objects.inv  prop.html  py-modindex.html  pyproject.toml  release.sh  requirements.txt  search.html  searchindex.js  setup.py  start.html
.github/workflows/: cpp_tests.yml  docs.yml  joss.yml  pypi.yml  python_tests.yml
_autosummary/: grss.fit.fit_ades.html  grss.fit.fit_optical.add_gaia_obs.html  grss.fit.fit_optical.add_psv_obs.html  grss.fit.fit_optical.apply_debiasing_scheme.html  grss.fit.fit_optical.apply_station_weight_rules.html  grss.fit.fit_optical.apply_weighting_scheme.html  grss.fit.fit_optical.apply_weights.html  grss.fit.fit_optical.create_optical_obs_df.html  grss.fit.fit_optical.debias_obs.html  grss.fit.fit_optical.deweight_obs.html  grss.fit.fit_optical.eliminate_obs.html  grss.fit.fit_optical.get_ades_optical_obs_array.html  grss.fit.fit_optical.get_gaia_optical_obs_array.html  grss.fit.fit_optical.get_mpc_optical_obs_array.html  grss.fit.fit_optical.get_mpc_raw_data.html  grss.fit.fit_optical.get_optical_data.html  grss.fit.fit_optical.get_optical_obs.html  grss.fit.fit_optical.get_optical_obs_data.html  grss.fit.fit_optical.get_packed_prog_id.html  grss.fit.fit_optical.get_space_based_observer_code.html  grss.fit.fit_optical.get_unpacked_prog_id.html  grss.fit.fit_optical.html  grss.fit.fit_radar.add_radar_obs.html  grss.fit.fit_radar.get_radar_obs_array.html  grss.fit.fit_radar.get_radar_raw_data.html  grss.fit.fit_radar.html  grss.fit.fit_simulation.FitSimulation.html  grss.fit.fit_simulation.IterationParams.html  grss.fit.fit_simulation.create_simulated_obs_arrays.html  grss.fit.fit_simulation.html  grss.fit.fit_utils.et2mjd.html  grss.fit.fit_utils.get_codes_dict.html  grss.fit.fit_utils.get_dec_from_dms.html  grss.fit.fit_utils.get_mpc_observatory_info.html  grss.fit.fit_utils.get_observer_info.html  grss.fit.fit_utils.get_ra_from_hms.html  grss.fit.fit_utils.get_radar_codes_dict.html  grss.fit.fit_utils.get_radec.html  grss.fit.fit_utils.get_sbdb_elems.html  grss.fit.fit_utils.get_sbdb_info.html  (+157 more)
_sources/: api.rst  api_cpp.rst  api_py.rst  fit.rst  index.rst  index.rst.txt  prop.rst.txt  start.rst
_sources/_autosummary/: grss.fit.fit_ades.rst  grss.fit.fit_optical.add_gaia_obs.rst  grss.fit.fit_optical.add_psv_obs.rst  grss.fit.fit_optical.apply_debiasing_scheme.rst  grss.fit.fit_optical.apply_station_weight_rules.rst  grss.fit.fit_optical.apply_weighting_scheme.rst  grss.fit.fit_optical.apply_weights.rst  grss.fit.fit_optical.create_optical_obs_df.rst  grss.fit.fit_optical.debias_obs.rst  grss.fit.fit_optical.deweight_obs.rst  grss.fit.fit_optical.eliminate_obs.rst  grss.fit.fit_optical.get_ades_optical_obs_array.rst  grss.fit.fit_optical.get_gaia_optical_obs_array.rst  grss.fit.fit_optical.get_mpc_optical_obs_array.rst  grss.fit.fit_optical.get_mpc_raw_data.rst  grss.fit.fit_optical.get_optical_data.rst  grss.fit.fit_optical.get_optical_obs.rst  grss.fit.fit_optical.get_optical_obs_data.rst  grss.fit.fit_optical.get_packed_prog_id.rst  grss.fit.fit_optical.get_space_based_observer_code.rst  grss.fit.fit_optical.get_unpacked_prog_id.rst  grss.fit.fit_optical.rst  grss.fit.fit_radar.add_radar_obs.rst  grss.fit.fit_radar.get_radar_obs_array.rst  grss.fit.fit_radar.get_radar_raw_data.rst  grss.fit.fit_radar.rst  grss.fit.fit_simulation.FitSimulation.rst  grss.fit.fit_simulation.IterationParams.rst  grss.fit.fit_simulation.create_simulated_obs_arrays.rst  grss.fit.fit_simulation.rst  grss.fit.fit_utils.et2mjd.rst  grss.fit.fit_utils.get_codes_dict.rst  grss.fit.fit_utils.get_dec_from_dms.rst  grss.fit.fit_utils.get_mpc_observatory_info.rst  grss.fit.fit_utils.get_observer_info.rst  grss.fit.fit_utils.get_ra_from_hms.rst  grss.fit.fit_utils.get_radar_codes_dict.rst  grss.fit.fit_utils.get_radec.rst  grss.fit.fit_utils.get_sbdb_elems.rst  grss.fit.fit_utils.get_sbdb_info.rst  (+164 more)
_sources/cppsummary/: elements.rst  force.rst  parallel.rst  pck.rst  simulation.rst  spk.rst  stm.rst
_static/: documentation_options.js
cppsummary/: approach.html  elements.html  force.html  gr15.html  ias15.html  interpolate.html  observe.html  parallel.html  pck.html  simulation.html  spk.html  stm.html  timeconvert.html  utilities.html
docs/doxygen/: doxygen.config
docs/source/: api.rst  conf.py  examples.rst  fit.rst  grss.rst  index.rst  modules.rst  prop.rst  start.rst
grss/: __init__.py  fit.py  fit_optical.py  fit_radar.py  fit_simulation.py  fit_utilities.py  fit_utils.py  prop.py  prop_utils.py  utils.py
grss/debias/: __init__.py  debias.py  get_debiasing_data.py  get_debiasing_data.sh
grss/fit/: __init__.py  fit_ades.py  fit_optical.py  fit_radar.py  fit_simulation.py  fit_utils.py
grss/kernels/: create_kernel_431.txt  create_kernel_441.txt  get_kernels.py  planets_big16_de431_1950_2350.tm  planets_big16_de441_1950_2350.tm  update_kernels.py  update_kernels.sh
grss/prop/: __init__.py  prop_parallel.py  prop_unscented.py  prop_utils.py
include/: approach.h  elements.h  force.h  gr15.h  grss.h  ias15.h  interpolate.h  observe.h  parallel.h  pck.h  simulation.h  spk.h  stm.h  timeconvert.h  utilities.h
joss/: joss_paper.bib  joss_paper.md  paper.bib  paper.md
kernels/: planets_big16_de431_1950_2350.tm  planets_big16_de441_1950_2350.tm  update_kernels.py  update_kernels.sh
src/: CMakeLists.txt  approach.cpp  body.cpp  body.h  elements.cpp  force.cpp  force.h  gr15.cpp  gr15.h  grss.cpp  grss.h  ias15.cpp  interpolate.cpp  interpolate.h  observe.cpp  parallel.cpp  pck.cpp  simulation.cpp  simulation.h  spk.cpp  stm.cpp  test.cpp  timeconvert.cpp  utilities.cpp  utilities.h
tests/cpp/prop/: CMakeLists.txt  apophis.cpp  didymos.cpp  pck_map.cpp  spk_map.cpp
tests/fit/: chesley.html  chesley.ipynb  eggl.html  eggl.ipynb  farnocchia.html  (+3 more)
(+51 files in other folders)
