[project]
name = "grss"
dynamic = ["version", "dependencies"]
description = "GRSS: Gauss-Radau Small-body Simulator"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
    "astronomy",
    "asteroids",
    "comets",
    "orbit determination",
    "orbit propagator"
]
authors = [
    {name = "Rahil Makadia"},
    {email = "makadia2@illinois.edu"}
]
maintainers = [
    {name = "Rahil Makadia"},
    {email = "makadia2@illinois.edu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/rahil-makadia/grss"
"Documentation" = "https://rahil-makadia.github.io/grss/"
"Source Code" = "https://github.com/rahil-makadia/grss"
"Bug Reports" = "https://github.com/rahil-makadia/grss/issues"

[build-system]
requires = ["setuptools>=43.0.0"]

[tool.setuptools]
package-data = {"grss" = [
    "debias/get_debiasing_data.py",
    "kernels/get_kernels.py",
    "kernels/*.log",
    "kernels/*.tm",
    "kernels/*.tpc",
    "kernels/*.txt",
]}
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "debias",
    "kernels",
]

[tool.setuptools.dynamic]
version = {file = "grss/version.txt"}
dependencies = {file = "requirements.txt"}

[tool.cibuildwheel]
before-build = [
    "pip install pybind11",
    "rm -rf build",
    "mkdir build",
    "pybind11_DIR=$(pybind11-config --cmakedir)",
    "cmake -Dpybind11_DIR=$pybind11_DIR -DPYTHON_EXECUTABLE=$(which python) -B./build -S.",
]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
