[project]
name = "grss"
dynamic = ["version", "dependencies"]
description = "GRSS: Gauss-Radau Small-body Simulator"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    "astronomy",
    "asteroids",
    "comets",
    "orbit determination",
    "orbit propagation"
]
authors = [
    {name = "Rahil Makadia"},
    {email = "makadia2@illinois.edu"}
]
maintainers = [
    {name = "Rahil Makadia"},
    {email = "makadia2@illinois.edu"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/rahil-makadia/grss"
"Documentation" = "https://rahil-makadia.github.io/grss/"
"Source Code" = "https://github.com/rahil-makadia/grss"
"Bug Reports" = "https://github.com/rahil-makadia/grss/issues"

[build-system]
requires = ["setuptools>=43.0.0"]

[tool.setuptools]
package-data = {"grss" = [
    "debias/get_debiasing_data.py",
    "kernels/get_kernels.py",
]}
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "debias",
    "kernels",
]

[tool.setuptools.dynamic]
version = {file = "grss/version.txt"}
dependencies = {file = "requirements.txt"}

[tool.cibuildwheel]
before-build = [
    "cd ./extern/",
    "python3 get_cspice.py",
    "cd ..",
    "pip install pybind11",
    ". ./build_cpp.sh -clean",
]

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET = "14"}
archs = ["arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
